Switch javacd binary path Supplier from Path to SourcePath
Summary: In order to make java rules serializable for RE

Reviewed By: bobyangyf

fbshipit-source-id: 32845d76a718fb9d36f57a0c3cfb59024d27fe22